Create basic function for character limitation

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ main #text-area {
   outline: none;
   resize: vertical;
   margin: var(--default-margin) 0;
-  transition: var(--default-transition);
+  transition: background-color .5s ease, border .5s ease, color .5s ease;
 }
 
 main .undertext-container {
@@ -115,4 +115,12 @@ main .undertext-container {
 .counter p {
   font-size: 1.2rem;
   font-weight: 400;
+}
+
+#character-limit.hidden {
+  display: none;
+}
+
+#limitation-warning.hidden {
+  display: none;
 }
