--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,52 @@ body {
 }
 
 /* Text density */
+.letter-density-header {
+  margin-bottom: 1rem;
+  font-size: 1.4rem;
+  font-weight: normal;
+}
+
+.progress-container {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  margin-bottom: .5rem;
+  width: 100%;
+}
+
+.letter {
+  width: 10px;
+  flex-shrink: 0;
+}
+
+.progress-bar {
+  flex: 1;
+  width: 100%;
+  height: 14px;
+  background-color: var(--text-area-background);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.progress-fill {
+  height: 100%;
+  background: #d3a1fa;
+  border-radius: 10px;
+  transition: width 0.6s ease-in-out;
+}
+
+.stats {
+  min-width: 100px;
+  width: 100px;
+  text-align: right;
+  flex-shrink: 0;
+  white-space: nowrap;
+}
+
+.stats p {
+  margin: 0;
+}
 
 /* Utilities */
 .hidden {
